--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,25 +1,28 @@
-env: prod
+env: local
 http:
   host: 0.0.0.0
-  #  host: 127.0.0.1
   port: 8000
+
 security:
   api_sign:
     app_key: 123456
     app_security: 123456
   jwt:
     key: QQYnRFerJTSEcrfB89fw8prOaObmrch8
+
 data:
   db:
     user:
       driver: sqlite
-      dsn: storage/nunu-test.db?_busy_timeout=5000
+      dsn: store/trove.db?_busy_timeout=5000
+
   #    user:
   #      driver: mysql
   #      dsn: root:123456@tcp(127.0.0.1:3380)/user?charset=utf8mb4&parseTime=True&loc=Local
   #    user:
   #      driver: postgres
   #      dsn: host=localhost user=gorm password=gorm dbname=gorm port=9920 sslmode=disable TimeZone=Asia/Shanghai
+
   redis:
     addr: 127.0.0.1:6350
     password: ""
@@ -28,10 +31,10 @@ data:
     write_timeout: 0.2s
 
 log:
-  log_level: info
-  encoding: json           # json or console
-  log_file_name: "./storage/logs/server.log"
+  log_level: debug
+  encoding: console
+  log_file_name: "./logs/server.log"
   max_backups: 30
-  max_age: 7
+  max_age: 30
   max_size: 1024
   compress: true
