--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -30,7 +30,7 @@ data:
 log:
   log_level: info
   encoding: json           # json or console
-  log_file_name: "./storage/logs/server.log"
+  log_file_name: "logs/trove.log"
   max_backups: 30
   max_age: 7
   max_size: 1024
